# pet-ieee-loader

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  link.cfg
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
loader/: check_immediate.sh  check_ram_filesize.sh  constants.inc  ieee.s  macros.inc  main.s  make_1mbit_image.sh  pet-ieee-loader.s  ram_template.cfg  rom_template.cfg  template.cfg  test.s
sender/: Cargo.toml
sender/src/: main.rs
src/: constants.inc  pet-ieee-loader.s
